--- a/lab06/styles.css
+++ b/lab06/styles.css
@@ -9,9 +9,12 @@ h1 h2 {
     color: green; 
 }
 
-tr {
-    color: green; 
-    
-}
 
+    
 .evenrow{background-color: aquamarine;}
+
+
+
+h1 {
+    text-emphasis: green; 
+}
