--- a/lab06/styles.css
+++ b/lab06/styles.css
@@ -1,5 +1,5 @@
 
-body{font-family:Arial, helvetica, sans-serif;}
+body{font-family: Arial, helvetica, sans-serif;}
 
 p a {
     color: gray; 
@@ -15,6 +15,4 @@ h1 h2 {
 
 
 
-h1 {
-    text-emphasis: green; 
-}
+h1 {font-size: large em;}
