--- a/lab07/styles.css
+++ b/lab07/styles.css
@@ -9,7 +9,7 @@ h1 h2 {
     color: green; 
 }
 
-.evenrow{background-color: aquamarine;}
+.evenrow {background-color: #b734eb;}
 
 nav a{background-color: blueviolet;}
 
