--- a/lab07/styles.css
+++ b/lab07/styles.css
@@ -11,7 +11,9 @@ h1 h2 {
 
 .evenrow {background-color: #b734eb;}
 
-nav a{background-color: blueviolet;}
+body {background-color: #fcba03}
+
+nav a{background-color: #b734eb;}
 
 nav a{color: #3d34eb}
 
