--- a/lab07/styles.css
+++ b/lab07/styles.css
@@ -19,7 +19,7 @@ nav a{color: #3d34eb}
 
 nav a:hover{color: #b734eb}
     
-nav a{background-color: aquamarine;}
+nav a{background-color: #4387f5;}
 
 nav {
     margin-bottom: 30px; 
