--- a/lab07/styles.css
+++ b/lab07/styles.css
@@ -1,5 +1,6 @@
 
-body{font-family: Arial, helvetica, sans-serif;}
+body{font-family: Arial, helvetica, sans-serif;
+background-color: yellow;}
 
 p a {
     color: gray; 
@@ -11,7 +12,6 @@ h1 h2 {
 
 .evenrow {background-color: #b734eb;}
 
-body {background-color: #fcba03}
 
 
 nav a{background-color: #b734eb;}
