--- a/lab10/styles.css
+++ b/lab10/styles.css
@@ -38,7 +38,7 @@ h2{font-size: .5 em;}
 
 @media only screen and (min-width: 600px) 
 {
-    nav a{width: 100%; display: block; margin-bottom: 30px; 
+    nav a{width: 100%; display: block;  
         padding: 10px; }
     span {display: none;}
 }
