--- a/lab10/styles.css
+++ b/lab10/styles.css
@@ -36,7 +36,7 @@ h2{font-size: .5 em;}
 
 .row2{flex-wrap: wrap;}
 
-@media only screen and (min-width: 600px) 
+@media only screen and (max-width: 600px) 
 {
     nav a{width: 100%; display: block;  
         padding: 10px; }
