--- a/lab10/styles.css
+++ b/lab10/styles.css
@@ -34,7 +34,7 @@ nav {
 h1{font-size: 2 em;}
 h2{font-size: .5 em;}
 
-.row2{flex-wrap: wrap;}
+.row2{flex-wrap: wrap}
 
 @media only screen and (max-width: 600px) 
 {
