--- a/lab10/styles.css
+++ b/lab10/styles.css
@@ -41,4 +41,5 @@ h2{font-size: .5 em;}
     nav a{width: 100%; display: block;  
         padding: 10px; }
     span {display: none;}
+    img a{max-width: 100%}
 }
