--- a/lab11/styles.css
+++ b/lab11/styles.css
@@ -23,7 +23,7 @@ nav a{color: #00cc00;}
 
 nav a:hover{color: #b734eb}
     
-nav a{background-color: #4387f5;}
+nav a{background-color: #ff4000;}
 
 nav {
     margin-bottom: 30px; 
