--- a/lab11/styles.css
+++ b/lab11/styles.css
@@ -19,7 +19,7 @@ h1 h2 {
 
 nav a{background-color: #ff4000;}
 
-nav a{color: #00cc00;}
+nav a{color: #3100f6;}
 
 nav a:hover{color: #b734eb}
     
