--- a/lab11/styles.css
+++ b/lab11/styles.css
@@ -17,7 +17,7 @@ h1 h2 {
 .quote{float: right; margin-right:10px; }
 .clear {clear: both; }
 
-nav a{background-color: #ff4000;}
+nav a{background-color: #cce5ff;}
 
 nav a{color: #3100f6;}
 
