--- a/lab11/styles.css
+++ b/lab11/styles.css
@@ -23,7 +23,7 @@ nav a{color: #3100f6;}
 
 nav a:hover{color: #b734eb}
     
-nav a{background-color: #ff4000;}
+nav a{background-color: #cce5ff;}
 
 nav {
     margin-bottom: 30px; 
