--- a/project6/project.css
+++ b/project6/project.css
@@ -5,3 +5,11 @@
 }
 .social-links{float: right; margin: 150px}
 .clear {clear: both; }
+
+@media only screen and (max-width: 600px) 
+{
+    nav a{width: 100%; display: block;  
+        padding: 10px; }
+    span {display: none;}
+    img a{max-width: 100%}
+}
