--- a/project6/project.css
+++ b/project6/project.css
@@ -1,3 +1,10 @@
+nav {
+    margin-bottom: 30px; 
+    padding: 10px; 
+    background-color: aliceblue;
+}
+
+
 @media only screen and (max-width: 600px) 
 {
     nav a{width: 100%; display: block;  
@@ -6,6 +13,4 @@
     padding: 100px; }
     span {display: none;}
     .banner{max-width: 100%}
-    .footer{width: 100%; display: block;  
-        padding: 10px; }
 }
