--- a/project6/project.css
+++ b/project6/project.css
@@ -1,6 +1,6 @@
 nav {
     margin-bottom: 40px; 
-    padding: 10px; 
+    padding: 10px;
     background-color: aliceblue;
 }
 
@@ -9,8 +9,9 @@ nav {
 {
     .logo{float: above}
     nav a{width: 100%; display: block;  
-        padding: 40px; 
-        float: left}
+        margin-bottom:40px; 
+        padding: 10px;
+        float: right}
     .blurb{width: 100%; display: block;  
     padding: 100px; }
     span {display: none;}
