--- a/project6/project.css
+++ b/project6/project.css
@@ -8,7 +8,7 @@
 @media only screen and (max-width: 600px) 
 {
     .logo{float: above}
-    .nav a{max-width:100%; display: flex; background-color: #cce5ff; border-radius: 1em; padding: 10px; flex: 1; margin: 10px}/*{width: 100%; display: block;  
+    .nav a{max-width:100%; display: flex; background-color: #cce5ff; border-radius: 1em; padding: 10px; flex: 1; margin: 10px; float: right}/*{width: 100%; display: block;  
         margin-bottom:40px; 
         padding: 10px;}*/
     .blurb{width: 100%; display: block;  
