--- a/project6/project.css
+++ b/project6/project.css
@@ -1,9 +1,9 @@
 .nav {
     margin-bottom: 40px; 
     padding: 10px;
-    background-color: #cce5ff;
 }
 
+.logo{background-color: #cce5ff;}
 
 @media only screen and (max-width: 600px) 
 {
