--- a/project6/project.css
+++ b/project6/project.css
@@ -7,7 +7,7 @@
 
 @media only screen and (max-width: 600px) 
 {
-    .logo{float: above; background-color: #cce5ff;}
+    .logo{float: center; background-color: aliceblue;}
     .nav a{max-width:100%; display: flex; background-color: aliceblue; border-radius: 1em; padding: 10px; flex: 1; margin: 10px; float: center}/*{width: 100%; display: block;  
         margin-bottom:40px; 
         padding: 10px;}*/
