--- a/project7/project.css
+++ b/project7/project.css
@@ -5,7 +5,7 @@
 
 .logo{background-color: #cce5ff;}*/
 
-@media only screen and (max-width: 600px) 
+@media only screen and (max-width: 500px) 
 {
     .logo{float: center; background-color: aliceblue;}
     .nav a{max-width:100%; display: flex; background-color: aliceblue; border-radius: 1em; padding: 10px; flex: 1; margin: 10px; float: center}/*{width: 100%; display: block;  
@@ -14,5 +14,9 @@
     .blurb{width: 100%; display: block;  
     padding: 100px; }
     span {display: none;}
-    .banner{max-width: 100%}
+    .banner{max-width: 100%; display: block;  
+        padding: 100px; }
+    .editorial{max-width: 100%; display: block;  
+        padding: 100px;}
+    .footer a{max-width: 100%}
 }
